// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SquareAppIcon component should render an app correctly with the app name 1`] = `
<div
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-icon-wrapper___2LcSe"
    >
      <div>
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeMedium MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-8 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    >
      0
    </span>
  </span>
  <p
    class="MuiTypography-root styles__SquareAppIcon-title___2yy0h makeStyles-iconTitle-5 MuiTypography-body1"
  >
    Test
  </p>
</div>
`;

exports[`SquareAppIcon component should render an app correctly with the given name 1`] = `
<div
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-icon-wrapper___2LcSe"
    >
      <div>
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeMedium MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-4 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    >
      0
    </span>
  </span>
  <p
    class="MuiTypography-root styles__SquareAppIcon-title___2yy0h makeStyles-iconTitle-1 MuiTypography-body1"
  >
    modified
  </p>
</div>
`;

exports[`SquareAppIcon component should render an app with the app slug if no name prop and app is a string 1`] = `
<div
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-icon-wrapper___2LcSe"
    >
      <div>
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeMedium MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-12 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    >
      0
    </span>
  </span>
  <p
    class="MuiTypography-root styles__SquareAppIcon-title___2yy0h makeStyles-iconTitle-9 MuiTypography-body1"
  >
    testslug
  </p>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in add state 1`] = `
<div
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-icon-wrapper___2LcSe styles__SquareAppIcon-add___3zlpa"
    >
      <div>
        <svg
          class="styles__icon___23x3R"
          height="16"
          style="fill: #fff;"
          viewBox="0 0 16 16"
          width="16"
        >
          <defs>
            <path
              d="M7 0h2v7h7v2H9v7H7V9H0V7h7z"
              id="plus_svg__a"
            />
          </defs>
          <use
            fill-rule="evenodd"
            xlink:href="#plus_svg__a"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeMedium MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-28 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    >
      0
    </span>
  </span>
  <p
    class="MuiTypography-root styles__SquareAppIcon-title___2yy0h makeStyles-iconTitle-25 MuiTypography-body1"
  />
</div>
`;

exports[`SquareAppIcon component should render correctly an app in error state 1`] = `
<div
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-icon-wrapper___2LcSe"
    >
      <div>
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeMedium MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorError"
      >
        !
      </span>
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-24 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    >
      0
    </span>
  </span>
  <p
    class="MuiTypography-root styles__SquareAppIcon-title___2yy0h makeStyles-iconTitle-21 MuiTypography-body1"
  >
    Test
  </p>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in ghost state 1`] = `
<div
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-icon-wrapper___2LcSe styles__SquareAppIcon-ghost___g1-TE"
    >
      <div>
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeMedium MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-20 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    >
      0
    </span>
  </span>
  <p
    class="MuiTypography-root styles__SquareAppIcon-title___2yy0h makeStyles-iconTitle-17 MuiTypography-body1"
  >
    Test
  </p>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in maintenance state 1`] = `
<div
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-icon-wrapper___2LcSe styles__SquareAppIcon-maintenance___1IuVc"
    >
      <div>
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeMedium MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-16 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    >
      0
    </span>
  </span>
  <p
    class="MuiTypography-root styles__SquareAppIcon-title___2yy0h makeStyles-iconTitle-13 MuiTypography-body1"
  >
    Test
  </p>
</div>
`;
